<resources>
    <!--公共部分-->
    <string name="app_name">Snowkids</string>

    <string name="loading">请求中</string>
    <string name="loading_error">请求失败</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_failure">操作失败</string>
    <string name="operate_error">操作异常</string>

    <string name="server_error">系统忙，请稍后重试</string>
    <string name="network_error">网络不通，请检查后重试</string>
    <string name="network_timeout_error">网络连接超时，请稍后重试</string>
    <string name="unknown_error">系统异常，请稍后重试</string>
    <string name="function_unavailable">功能开发中，敬请期待~</string>

    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新</string>
    <string name="header_hint_refresh_loading">刷新中</string>
    <string name="header_hint_refresh_time">最后更新时间：</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">松开加载更多</string>

    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="prompt">提示</string>
    <string name="sure">确定</string>
    <string name="send">发送</string>
    <string name="read_more">查看更多...</string>
    <string name="empty">暂无内容，请重试</string>
    <string name="time">日期</string>
    <string name="level">等级</string>
    <string name="query">查询</string>
    <string name="search">搜索</string>

    <!--主菜单-->
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="device">Device</string>
    <string name="device_type">Device Type</string>
    <string name="device_list">Device List</string>
    <string name="parameter_list">Parameter List</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_filter">Alarm Filter</string>
    <string name="alarm_list">Alarm List</string>
    <string name="operate_log">Operate Log</string>
    <string name="operate_log_list">Operate Log List</string>
    <string name="operate_log_filter">Operate Log Filter</string>
    <string name="settings">Settings</string>

    <!--登录鉴权-->
    <string name="action_settings">设置</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="login_error">登录异常</string>
    <string name="user_name_is_null">用户名不能为空</string>
    <string name="password_is_null">密码不能为空</string>

    <!--其他-->
    <string name="device_colon">设备: </string>
    <string name="user_colon">用户:</string>
    <string name="date_choice">选择日期:</string>
    <string name="date">日期</string>
    <string name="alarm_type">告警类型</string>
    <string name="operate_log_type">操作日志类型</string>
    <string name="operate_log_user">操作用户</string>
    <string name="timeStart">开始时间</string>
    <string name="timeEnd">终止时间</string>
    <string name="device_type_small">设备类型</string>
    <string name="device_name_small">设备名称</string>
    <string name="device_name_is_null">设备名称不能为空，请重新输入</string>

    <string name="device_name_colon">设备名称：</string>
    <string name="device_type_colon">设备类型：</string>
    <string name="device_model_colon">设备型号：</string>
    <string name="device_describe_colon">设备描述：</string>

    <string name="search_commit">请输入设备名称，并点击键盘搜索键</string>

    <string name="remeber_me">记住我</string>
    <string name="receive_push_message">接收消息提醒</string>
    <string name="operate_environment">操作环境</string>
    <string name="server_ip">服务器地址</string>
    <string name="server_tip">提醒：如果您输入上述地址，应用所有请求将指向您输入的新地址。格式参考：182.92.107.7:8080</string>
    <string name="setting_success">设置成功</string>


    <!--new-->

    <string name="power_full_remind">满电提醒</string>
    <string name="theft_proof_remind">防盗提醒</string>
    <string name="night_model">夜间模式</string>
    <string name="power_full_remind_label">手机电量达到100%，开启本项可收到音乐或震动提醒</string>
    <string name="theft_proof_remind_label">使用本App时，拔出数据线会发出警告声音，并发送推送通知</string>
    <string name="share_app">分享APP</string>
    <string name="snowkids_version">Snowkids 1.0</string>
    <string name="snowkids_market_jingdong">Snowkids 京东旗舰店</string>
    <string name="snowkids_market_taobao">Snowkids 天猫旗舰店</string>

    <string name="power_full">已充满</string>
    <string name="power_ing">充电中</string>
    <string name="power_time_out">剩余可用时间:</string>
    <string name="welcome_label">时刻在你身边</string>
    <string name="night_model_time_setting">夜间模式    时间设定</string>
    <string name="night_model_from_10_to_7">由 下午10:00 至 上午7:00</string>
</resources>
