<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@mipmap/bg_content"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/public_top_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/alarm_type"
                android:textColor="@color/white"
                android:textSize="@dimen/font_17sp" />

            <com.rat.nm.view.WheelView
                android:id="@+id/alarmType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/device_type_small"
                android:textColor="@color/white"
                android:textSize="@dimen/font_17sp" />

            <com.rat.nm.view.WheelView
                android:id="@+id/deviceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/device_name_small"
                android:textColor="@color/white"
                android:textSize="@dimen/font_17sp" />

            <com.rat.nm.view.WheelView
                android:id="@+id/deviceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/timeStart"
                android:textColor="@color/white"
                android:textSize="@dimen/font_17sp" />

            <TextView
                android:id="@+id/timeStart"
                style="@style/textview_white_no_margin"
                android:hint="@string/timeStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/timeEnd"
                android:textColor="@color/white"
                android:textSize="@dimen/font_17sp" />

            <TextView
                android:id="@+id/timeEnd"
                style="@style/textview_white_no_margin"
                android:hint="@string/timeEnd" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/queryBtn"
        style="@style/button_blue"
        android:layout_marginTop="20dp"
        android:text="@string/query" />
</LinearLayout>