<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@mipmap/bg_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <include layout="@layout/public_top_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="25dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@mipmap/rounded_btn_white"
        android:drawableRight="@mipmap/filter_more"
        android:padding="15dp"
        android:text="Week"
        android:textColor="@color/blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/level"
        android:textColor="@color/white"
        android:textSize="25dp" />


    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@mipmap/rounded_btn_white"
        android:drawableRight="@mipmap/filter_more"
        android:padding="15dp"
        android:text="Warn"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/queryBtn"
        style="@style/button_blue"
        android:text="@string/query"
        android:textColor="@color/white" />
</LinearLayout>
