<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/public_top_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/powerDataLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/powerDataView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/power_data" />

            <TextView
                android:id="@+id/powerStatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/marketLL"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/marketTBTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:drawableLeft="@mipmap/taobao_logo"
                android:text="@string/snowkids_market_taobao"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/marketJDTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:drawableLeft="@mipmap/jingdong_logo"
                android:text="@string/snowkids_market_jingdong"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/remindLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/marketLL"
            android:layout_below="@id/powerDataLL"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/powerFullRemindRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rectangle_solid_red"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/powerFullRemindIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:background="@mipmap/circle_green" />

                <TextView
                    android:id="@+id/powerFullRemindTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/powerFullRemindIV"
                    android:text="@string/power_full_remind"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/powerFullRemindTV"
                    android:layout_toRightOf="@id/powerFullRemindIV"
                    android:text="@string/power_full_remind_label"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/theftProofRemindRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rectangle_solid_red"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/theftProofRemindIV"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:background="@mipmap/circle_red" />

                <TextView
                    android:id="@+id/theftProofRemindTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/theftProofRemindIV"
                    android:text="@string/theft_proof_remind"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/theftProofRemindTV"
                    android:layout_toRightOf="@id/theftProofRemindIV"
                    android:text="@string/theft_proof_remind_label"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>