<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@mipmap/bg_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/public_top_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="15dp"
        android:background="@color/gray_ad" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/remeber_me"
            android:textColor="@color/white"
            android:textSize="@dimen/font_17sp" />

        <ImageView
            android:id="@+id/remeberMeIV"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@mipmap/settings_turn_on" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/gray_ad" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:visibility="gone"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/receive_push_message"
            android:textColor="@color/white"
            android:textSize="@dimen/font_17sp" />

        <ImageView
            android:id="@+id/receivePushMessageIV"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@mipmap/settings_turn_on" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0.2dp"
        android:background="@color/gray_ad" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/operate_environment"
            android:textColor="@color/white"
            android:textSize="@dimen/font_17sp"
            android:id="@+id/textView" />
    </RelativeLayout>

    <com.rat.nm.view.WheelView
        android:id="@+id/operateEnvironment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray_ad" />

</LinearLayout>
